<package>
  <name>cart_assembly</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for cart_assembly</p>
    <p>This package contains configuration data, 3D models and launch files
for cart_assembly robot</p>
  </description>
  <author>me</author>
  <maintainer email="alwinreji18@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>